--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
       <!DOCTYPE html>
 <html>
   <head>
-    <title>Testcases_PGV</title>
+    <title>Testcases_Voltus</title>
     <link rel="stylesheet" href="css/drv_recomm.css">
     <style>
       table,
@@ -23,7 +23,7 @@
     <table>
       <tr>
         <th>Inputs</th>
-        <th>Testcase </th>
+        <th>Testcases </th>
 
 
 </tr>
