--- a/testcase_pgv.html
+++ b/testcase_pgv.html
@@ -68,6 +68,18 @@ run.tcl
       </tr>
 
 
+      <tr>
+        <td>Macro: tap current or generic</td>
+        <td>
+
+      <b>Run directory</b>: /it/sjclapa03s2_scratch01/gmayank/expire_2022_09_30/mayank_scratch/cases/pgv_negativecurrent/PGV/work</br>
+      <b>Script</b> :invoke voltus 21.14</br>
+source../voltus_FF_cmd
+
+        </td>
+
+      </tr>
+
     </table>
 </br>
 </br>
