--- a/testcase_pgv.html
+++ b/testcase_pgv.html
@@ -66,15 +66,13 @@ run.tcl
 
 
       </tr>
-
-
       <tr>
         <td>Macro: tap current or generic</td>
         <td>
 
       <b>Run directory</b>: /it/sjclapa03s2_scratch01/gmayank/expire_2022_09_30/mayank_scratch/cases/pgv_negativecurrent/PGV/work</br>
       <b>Script</b> :invoke voltus 21.14</br>
-source../voltus_FF_cmd
+      source../voltus_FF_cmd
 
         </td>
 
@@ -179,10 +177,39 @@ report_instance_power FE_OFC1851_FE_OFN1273_ver_link_sif_o_4__45
       </tr>
 
 
+</table>
+
+</br>
+</br>
+<h2>Power Analysis</h2>
+</br>
+
+    <table>
+      <tr>
+        <th>Inputs</th>
+        <th>Testcase </th>
+
+
+</tr>
+
+<tr>
+  <td>Cell having more than 1 PG pin</td>
+  <td>
+
+  </td>
+</tr>
 
 
 
-    </table>
+<tr>
+  <td>Signal EM</td>
+  <td>
+    cd /servers/noivl-gmayank/gmayank/voltus/electromigration/Signal_EM_RAK/Signal_EM</br>
+nedit ilimit_cal.cmd &
+
+  </td>
+</table>
+
 
 
 
