--- a/index.html
+++ b/index.html
@@ -177,10 +177,39 @@ report_instance_power FE_OFC1851_FE_OFN1273_ver_link_sif_o_4__45
       </tr>
 
 
+</table>
+
+</br>
+</br>
+<h2>Power Analysis</h2>
+</br>
+
+    <table>
+      <tr>
+        <th>Inputs</th>
+        <th>Testcase </th>
+
+
+</tr>
+
+<tr>
+  <td>Cell having more than 1 PG pin</td>
+  <td>
+
+  </td>
+</tr>
 
 
 
-    </table>
+<tr>
+  <td>Signal EM</td>
+  <td>
+    cd /servers/noivl-gmayank/gmayank/voltus/electromigration/Signal_EM_RAK/Signal_EM</br>
+nedit ilimit_cal.cmd &
+
+  </td>
+</table>
+
 
 
 
