--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ report_instance_power FE_OFC1851_FE_OFN1273_ver_link_sif_o_4__45
 
 </br>
 </br>
-<h2>Power Analysis</h2>
+<h2>Signal EM</h2>
 </br>
 
     <table>
@@ -192,12 +192,6 @@ report_instance_power FE_OFC1851_FE_OFN1273_ver_link_sif_o_4__45
 
 </tr>
 
-<tr>
-  <td>Cell having more than 1 PG pin</td>
-  <td>
-
-  </td>
-</tr>
 
 
 
