--- a/testcase_pgv.html
+++ b/testcase_pgv.html
@@ -79,7 +79,7 @@ run.tcl
       </tr>
 
       <tr>
-        <td>DDV- Dynamic PGV</td>
+        <td>DDV- Dynamic PGV/ Characterizing Current waveform</td>
         <td>
 
       <b>Run directory</b>: /it/sjclapa03s2_scratch01/gmayank/expire_2022_12_30/mayank_scratch/DDV_FLOW/PGV_GEN
